// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAutosuggestSuggestion should render correctly 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with a "className" attribute 1`] = `
<section
  className="bpk-autosuggest__suggestion custom-class-1 custom-class-2"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with a "subHeading" attribute 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
    <small
      className="bpk-autosuggest__suggestion-sub-heading"
    >
      United Kingdom
    </small>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with a "subHeading" attribute being an element 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
    <small
      className="bpk-autosuggest__suggestion-sub-heading"
    >
      <strong>
        United Kingdom
      </strong>
    </small>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with a "tertiaryLabel" attribute 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
    <small
      className="bpk-autosuggest__suggestion-sub-heading"
    >
      United Kingdom
    </small>
    <aside
      className="bpk-autosuggest__suggestion-tertiary-label"
    >
      Scotland
    </aside>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with a "tertiaryLabel" attribute but without a "subHeading" attribute 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
    <small
      className="bpk-autosuggest__suggestion-sub-heading"
    />
    <aside
      className="bpk-autosuggest__suggestion-tertiary-label"
    >
      Scotland
    </aside>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with a "value" attribute being an element 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      <strong>
        Edinburgh
      </strong>
    </span>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with all available attributes 1`] = `
<section
  className="bpk-autosuggest__suggestion bpk-autosuggest__suggestion--indent"
>
  <svg
    className="bpk-autosuggest__suggestion-icon"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.455 8.78a.775.775 0 0 1 .952.224l1.472 1.91 1.816-.267a2.852 2.852 0 0 1 .536-.051h9.862a5.099 5.099 0 0 1 2.438.62.944.944 0 0 1-.072 1.67l-.046.021a5.1 5.1 0 0 1-2.194.497h-4.314l-3.663 5.867A1.546 1.546 0 0 1 8.93 20H7.78l2.007-5.858v-.738h-1.53a2.865 2.865 0 0 1-.589-.062l-1.765-.288-1.509 1.958a.775.775 0 0 1-.929.237.786.786 0 0 1-.419-.984L3.862 12 3.06 9.749a.785.785 0 0 1 .395-.97zM8.929 4a1.545 1.545 0 0 1 1.312.729l3.19 4.985H9.749L7.778 4z"
    />
  </svg>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
    <small
      className="bpk-autosuggest__suggestion-sub-heading"
    >
      United Kingdom
    </small>
    <aside
      className="bpk-autosuggest__suggestion-tertiary-label"
    >
      Scotland
    </aside>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with an "icon" attribute 1`] = `
<section
  className="bpk-autosuggest__suggestion"
>
  <svg
    className="bpk-autosuggest__suggestion-icon"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.455 8.78a.775.775 0 0 1 .952.224l1.472 1.91 1.816-.267a2.852 2.852 0 0 1 .536-.051h9.862a5.099 5.099 0 0 1 2.438.62.944.944 0 0 1-.072 1.67l-.046.021a5.1 5.1 0 0 1-2.194.497h-4.314l-3.663 5.867A1.546 1.546 0 0 1 8.93 20H7.78l2.007-5.858v-.738h-1.53a2.865 2.865 0 0 1-.589-.062l-1.765-.288-1.509 1.958a.775.775 0 0 1-.929.237.786.786 0 0 1-.419-.984L3.862 12 3.06 9.749a.785.785 0 0 1 .395-.97zM8.929 4a1.545 1.545 0 0 1 1.312.729l3.19 4.985H9.749L7.778 4z"
    />
  </svg>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
  </div>
</section>
`;

exports[`BpkAutosuggestSuggestion should render correctly with an "indent" attribute 1`] = `
<section
  className="bpk-autosuggest__suggestion bpk-autosuggest__suggestion--indent"
>
  <div
    className="bpk-autosuggest__suggestion-inner"
  >
    <span
      className="bpk-autosuggest__suggestion-value"
    >
      Edinburgh
    </span>
  </div>
</section>
`;
